# owltech_Middleware

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  PeriMake.ioc  README.md
GenericComponents/inc/: Structs.cpp
Src/: gpio.c  tim.c
middleware/: BaseClassCpp.hpp  BaseFileC.hpp
middleware/inc/: BNO055.h  BaseMotor.hpp  BaseStructs.h
middleware/src/: BNO055.c  BaseMotor.cpp
owltechMiddleware/: BaseFileC.h  robotAssesment.cpp
owltechMiddleware/inc/: BNO055.h  BaseMotor.hpp  BaseStructs.h  ControllerCAN.hpp  ControllerFDCAN.hpp  ControllerPWM.hpp  Motor_2305.hpp  Motor_5203.hpp  Motor_GM6020.hpp  PIDcontrol.hpp  ReciverChanel.hpp  SCM3508.hpp  SCMC610.hpp  SPM3508.hpp
owltechMiddleware/src/: BaseControler.cpp  BaseMotor.cpp  ContrPWM.cpp  ControllerCAN.cpp  ControllerFDCAN.cpp  ControllerPWM.cpp  Motor_2305.cpp  Motor_GM6020.cpp  PIDcontrol.cpp  ReciverChanel.cpp  SCM3508.cpp
robotConfig/: STM32F407IEHx_FLASH.ld
robotConfig/inc/: stm32f4xx_hal_conf.h
robotConfig/src/: freertos.c  i2c.c  main.c
